--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <script src="./lesson-module_1.js"type = module></script>
     <script src="./lesson-module_mentor-task.1.js"type = module></script>
+    <script src="./lesson-module_1.2.js"type = module></script>
+    <script src="./lesson-module_mentor-task.1.2.js"type = module></script>
 </body>
 </html>
