--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./lesson-module_1.2.js"></script>
-    <script src="./esson-module_mentor-task.1.2.js"></script>
+    <script src="./lesson-module_2.js"></script>
+    <script src="./lesson-module_mentor-task2.js"></script>
 </body>
 </html>
