--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <label>
+        Number
+        <input type="number" data-value>
+    </label>
+    <button type="button" data-add >Add</button>
+
     <script src="./lesson-module_1.js"type = module></script>
     <script src="./lesson-module_mentor-task.1.js"type = module></script>
     <script src="./lesson-module_1.2.js"type = module></script>
