--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <label>
-        Number
-        <input type="number" data-value>
-    </label>
-    <button type="button" data-add >Add</button>
-
-    <script src="./lesson 2.1.js"type = module></script>
-    <script src="./lesson 2.1.task.js"type = module></script>
-    <script src="./lesson 2.2.js"type = module></script>
-    <script src="./lesson 2.2.task.js"type = module></script>
+    <button class="js-btn">
+        this is button
+    </button>
+    <script src="./lesson 4.1.js"type = module></script>
+    <script src="./lesson 4.1.task.js"type = module></script>
+    <script src="./lesson 4.2.js"type = module></script>
+    <script src="./lesson 4.2.task.js"type = module></script>
 </body>
 </html>
